--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,9 @@ secret.md
 /public/uploads/laporan/*
 !/public/uploads/laporan/.gitkeep
 
+/public/uploads/proof/*
+!/public/uploads/proof/.gitkeep
+
 
 # next.js
 /.next/
